// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getBinaryPath when OS is "darwin" returns CLI filepath 1`] = `"directory/name"`;

exports[`getBinaryPath when OS is "linux" returns CLI filepath 1`] = `"directory/name"`;

exports[`getBinaryPath when OS is "win32" returns CLI filepath 1`] = `"directory/name.exe"`;

exports[`getDownloadObject when OS is "darwin" and arch is "arm64" gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-darwin.tgz?version=0.5.10",
}
`;

exports[`getDownloadObject when OS is "darwin" and arch is "x64" gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-darwin.tgz?version=0.5.10",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "arm64" gets download object 1`] = `
{
  "binaryDirectory": "bin",
  "url": "https://ollama.com/download/ollama-linux-arm64.tgz?version=0.5.10",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "x64" gets download object 1`] = `
{
  "binaryDirectory": "bin",
  "url": "https://ollama.com/download/ollama-linux-amd64.tgz?version=0.5.10",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "arm64" gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-windows-arm64.zip?version=0.5.10",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "x64" gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-windows-amd64.zip?version=0.5.10",
}
`;
